<resources>
    <string name="app_name">ForFishes</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
    <string-array name="states">
        <item>Select State</item>
        <item>TAMILNADU</item>
        <item>KERALA</item>
        <item>KARNATAKA</item>
    </string-array>
    <string name="todo2">TODO2</string>
    <string name="new_user">NEW USER</string>
    <string name="already_an_user">ALREADY AN USER</string>
    <string name="todos">TODOS</string>
    <string name="todoa">TODOA</string>
    <string name="button1">Join now</string>
    <string name="button2">Existing user? Login</string>
    <string name="todoz">TODOZ</string>
    <string name="textviewq">Phone_number</string>
    <string name="phone_numbers">Phone_NumberS</string>
    <string name="todoss">TODOSS</string>
    <string name="textviewss">Phonenumber</string>
    <string name="textview1">Password</string>
    <string name="passwordd">PasswordD</string>
    <string name="checkbox">CheckBox</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="ssss">TODOsss</string>
    <string name="egfds">TextView2</string>
    <string name="sssssssssssss">TextView</string>
    <string name="done">TODO</string>
    <string name="ssssssssssssss">TextView</string>
    <string name="LoggIn">LOGIN</string>
    <string name="admin">ADMIN</string>
    <string name="namesss">Enter name</string>
    <string name="new_in">Name</string>
    <string name="create_account">Create Account</string>
    <string name="Nams">NameS</string>
    <string name="image">Img</string>
    <string name="play">Play</string>
    <string name="Enter">Name</string>
    <string name="Enter1">Pass</string>
    <string name="join">JOIN</string>
    <string name="Entered">Enteredd</string>
    <string name="Logout">Logout</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="button11">Button</string>
    <string name="button">Send OTP</string>
    <string name="verifyotp">Verify OTP</string>

    <string name="sssss">Namesssss</string>
    <string name="sdfvsevfd">Phone number</string>
    <string name="vds">Phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="Password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="admininstrative">Admin</string>
    <string name="login_now">Login now</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="adding_new_product">Adding new Product</string>
    <string name="product_name">product name</string>
    <string name="product_descriptions">Product Description</string>
    <string name="product_description1">Product Description</string>
    <string name="product_price">product_price</string>
    <string name="add_product">Add Product</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Settings">setting</string>
    <string name="Category">category</string>
    <string name="Orders">orders</string>
    <string name="Cart">cart</string>
    <string name="button5">Button5</string>
    <string name="title_activity_scrollable">ScrollableActivity</string>
    <string name="Username">User Name</string>
    <string name="title_activity_final">FinalActivity</string>
    <string name="title_activity_usermain">UsermainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="product_name12">Product Name</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_endusers">endusers</string>
    <string name="user_name">user name</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="change">Change</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="full_name">Full Name</string>
    <string name="addresss">Address</string>
    <string name="next_page">Next Page</string>
    <string name="you_are_here_now">You are Here now</string>
    <string name="product_name11">Product Name</string>
    <string name="product_price1">Product Price</string>
    <string name="_0">0</string>
    <string name="dec">-</string>
    <string name="inc">+</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_price">Total Price =</string>
    <string name="next_step">Next Step</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_name1">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="pricee">Price</string>
    <string name="please_confirm_your_shipment_details">Please confirm your Shipment details</string>
    <string name="name_for_delivrty_address">Name for delivrty address</string>
    <string name="pin_code">Pin code</string>
    <string name="enter_address_here">Enter address here</string>
    <string name="alternate_phone_number">Alternate Phone number</string>
    <string name="congrads_your_order_has_been_placed_successfully">Congrads Your order has been placed successfully!</string>
    <string name="ordered_user_name">Ordered user name</string>
    <string name="totalamt">Total amount</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="date">Date</string>
    <string name="tim">Time</string>
    <string name="payee_name">PAYEE NAME</string>
    <string name="amount">Amount</string>
    <string name="upi_id">UPI id</string>
    <string name="remove">Remove</string>
    <string name="enter_product_name_you_want_to_buy">Enter product name you want to buy</string>
    <string name="searchpro">Search Product</string>
    <string name="search">Search</string>
    <string name="check_placed_orders">Check placed orders</string>
    <string name="apply_changes">Apply changes</string>
    <string name="product_description">Product Description</string>
    <string name="product_pricess">Product Price</string>
    <string name="product_namess">Product Name</string>
    <string name="delete_prodcuct">Delete prodcuct</string>
    <string name="update_now">Update now</string>
    <string name="customise_product_details">Customise product Details</string>
    <string name="piditis">piditis</string>
    <string name="proceed">PROCEED</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="fulladdress">Enter Complete Address</string>
    <string name="state">State</string>
    <string name="you_cannot_add_your_next_order_until_your_order_has_shipped_don_t_worry_within_24_48_hours_your_order_will_be_dispatch">You cannot add your next order until your order has shipped. Don\'t worry within 24-48 hours your order will be dispatch.!</string>
    <string name="search_by_category">Click here to Search by category</string>
    <string name="order_status">Order Status</string>
    <string name="sssvs">Settings</string>
    <string name="cscs">Cart</string>
    <string name="your_cart_is_empty">Your cart is empty.!</string>
    <string name="you_do_not_have_an_order_history">You do not have an Order History</string>
    <string name="currently_none_of_your_orders_are_under_process">Currently none of your orders are under process.!</string>
    <string name="click_here_to_check_the_order_status">Click here to check the order status</string>
    <string name="your_order_has_been_packed_soon_it_will_be_dispatch_to_your_location">Your order has been packed, And soon it will be dispatch to your location.!</string>
    <string name="your_order_is_placed_successfully_we_are_working_on_it_to_dispatch">Your order is placed successfully, We are working on it to dispatch.!</string>
    <string name="your_order_has_been_sent_to_you_through_courier_soon_it_will_reach_you">Your order has been sent to you through courier, soon it will reach you.!</string>
    <string name="total_amount_payable">Total amount payable including delivery charges:</string>
    <string name="your_order_has_been_placed_succesfully_soon_we_will_deliver_you_product_at_your_door_step">Congradulations.! Your order has been placed succesfully, soon we will deliver you product at your door step, You can check the status of your order in my orders.!</string>
    <string name="click_here_to_go_home">click here to go home.!</string>
    <string name="track_status">Track Status</string>
    <string name="combo">Combo</string>
    <string name="accessories">Accessories</string>
    <string name="food">Food</string>
    <string name="medicine">Medicine</string>
    <string name="upload_pic">Upload pic</string>
    <string name="show_this_order_products">Show this order products</string>
    <string name="tamilnadu">Tamilnadu:</string>
    <string name="tn">Tamilnadu:</string>
    <string name="customer_care_support"><![CDATA[Customer care & Support]]></string>
    <string name="privacy_policy">Privacy Policy:</string>
    <string name="your_personal_information_like_phone_number_password_and_your_order_details_will_be_highly_confidential_and_will_never_be_share_with_anyone">Your personal information like phone number, password and your order details will be highly confidential and will never be share with anyone.</string>
    <string name="incase_of_any_queries_related_to_your_account_order">Incase of any queries, related to your Account/Order</string>
    <string name="queries_related_to_your_account_orders">Queries related to your Account/Orders:</string>
    <string name="you_can_write_an_email_to_the_below_email_address_or_leave_your_queries_to_the_below_whatsapp_number_you_concern_will_be_resolve_within_24_hours">You can write an Email to the below email address, or leave your queries to the below whatsapp number, You concern will be resolve within 24 hours.!</string>

</resources>
