<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/cscs"
            android:iconTint="@android:color/white"
            />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/orders"
            android:iconTint="@android:color/white"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:iconTint="@android:color/white"
            android:title="@string/order_status" />

        <item
            android:id="@+id/nav_setting"
            android:iconTint="@android:color/white"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sssvs" />

        <item
            android:id="@+id/customercare"
            android:icon="@drawable/headphoness"
            android:iconTint="@android:color/white"
            android:title="@string/customer_care_support" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:iconTint="@android:color/white"
            android:title="@string/Logout" />
    </group>



</menu>
