<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="343dp"
        android:layout_height="312dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button">


        <TextView
            android:id="@+id/orderedusername"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="107dp"
            android:layout_marginTop="12dp"
            android:text="@string/ordered_user_name"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/usersphonenumber"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="98dp"
            android:layout_marginTop="45dp"
            android:text="@string/phone_number"

            android:textAlignment="center"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/costoforder"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="99dp"
            android:layout_marginTop="104dp"
            android:text="@string/totalamt"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Addressofthecus"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="65dp"
            android:text="@string/address"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/pincodeofuser"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="99dp"
            android:layout_marginTop="133dp"
            android:text="@string/pincode"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dateoforder"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="99dp"
            android:layout_marginTop="157dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/timeoforder"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="177dp"
            android:text="@string/tim"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/showplacedproducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="68dp"
            android:layout_marginBottom="34dp"
            android:background="@android:color/white"
            android:text="Show this order products" />


    </RelativeLayout>

</RelativeLayout>