<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_endusers">


    <RelativeLayout
        android:layout_width="70dp"
        android:layout_height="725dp"
        android:layout_gravity="right">

        <TextView
            android:id="@+id/sbc"
            android:layout_width="83dp"
            android:layout_height="76dp"
            android:layout_gravity="end"
            android:text="@string/search_by_category"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/combos"
            android:layout_width="77dp"
            android:layout_height="74dp"

            android:layout_gravity="end"
            android:layout_marginTop="85sp"
            android:background="@drawable/combo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/combos"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="-15dp"
            android:text="@string/combo"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/sec"
            android:layout_width="71dp"
            android:layout_height="74dp"
            android:layout_gravity="end"
            android:layout_marginTop="185dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/acc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessories"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_below="@+id/sec"
            />

        <ImageView
            android:id="@+id/thr"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginTop="290dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/food" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/food"
    android:textStyle="bold"
    android:layout_below="@+id/thr"
    android:layout_marginLeft="18dp"
    />
        <ImageView
            android:id="@+id/frr"
            android:layout_width="64dp"
            android:layout_height="59dp"
            android:layout_gravity="end"
            android:layout_marginTop="385dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/fishm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/medicine"
            android:layout_below="@id/frr"
            />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_menu"
        android:layout_width="279dp"
        android:layout_height="668dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login1"
        android:scrollbars="vertical"
        app:reverseLayout="true"
        app:stackFromEnd="true">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.cardview.widget.CardView>