<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp"
    tools:context=".AdminAlterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="606dp">

        <EditText
            android:id="@+id/product_names"
            android:layout_width="318dp"
            android:layout_height="61dp"
            android:layout_below="@+id/product_images"
            android:layout_alignParentStart="true"


            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="258dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/input_design"
            android:text="@string/product_namess"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/product_images"
            android:layout_width="264dp"
            android:layout_height="231dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="47dp"
            android:scaleType="centerCrop" />

        <EditText
            android:id="@+id/product_prices"
            android:layout_width="305dp"
            android:layout_height="65dp"
            android:layout_below="@+id/product_descriptions"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="29dp"
            android:background="@drawable/input_design"
            android:text="@string/product_pricess"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/product_descriptions"
            android:layout_width="311dp"
            android:layout_height="55dp"
            android:layout_below="@+id/product_names"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="18dp"

            android:background="@drawable/input_design"
            android:text="@string/product_description"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/applychanges"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_prices"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="451dp"
            android:layout_marginEnd="51dp"
            android:background="@drawable/button"
            android:text="@string/apply_changes" />

        <Button
            android:id="@+id/deleteproduct"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/applychanges"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="510dp"
            android:layout_marginEnd="47dp"
            android:background="@drawable/button"
            android:text="@string/delete_prodcuct" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>