<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login1"
    tools:context=".OrderStatusActivity">

    <TextView
        android:id="@+id/orderHistor"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="599dp"
        android:visibility="invisible"
        android:layout_marginEnd="26dp"
        android:text="@string/you_do_not_have_an_order_history"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="354dp"
        android:layout_height="245dp"
        android:id="@+id/biller"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginStart="19dp"
        android:layout_marginTop="77dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/currenthistory"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="523dp"
        android:visibility="invisible"
        android:text="@string/your_order_has_been_packed_soon_it_will_be_dispatch_to_your_location"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/currenthistory1"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="523dp"
        android:visibility="invisible"
        android:text="@string/your_order_is_placed_successfully_we_are_working_on_it_to_dispatch"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/currenthistory2"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="523dp"
        android:visibility="invisible"
        android:text="@string/your_order_has_been_sent_to_you_through_courier_soon_it_will_reach_you"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />




</RelativeLayout>